--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,11 @@
+/*
+Orange color: #e67e22
+*/
+
+/*--------------------------------------*/
+/* BASIC SETUP */
+/*--------------------------------------*/
+
 * {
     margin: 0;
     padding: 0;
@@ -13,29 +21,17 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+/*--------------------------------------*/
+/* REUSABLE COMPONENTS */
+/*--------------------------------------*/
+
 .row {
     max-width: 1140px;
     margin: 0 auto;
 }
 
-header {
-    /* 漸層色: linear-gradient(開始色, 結束色) */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-}
 
-.hero-text-box {
-    position: absolute;
-    width: 1140px;
-    /*  離開top多遠, 離開left多遠  */
-    top: 50%;
-    left: 50%;
-    /*  translate(向X軸靠近, 向Y軸靠近)  */
-    transform: translate(-50%, -50%);
-}
-
+/* ----- HEADING ----- */
 h1 {
     margin-top: 0px;
     margin-bottom: 20px;
@@ -49,6 +45,9 @@ h1 {
     word-spacing: 4px;
 }
 
+
+
+/* ----- BUTTONS ----- */
 .btn:link,
 .btn:visited {
     display: inline-block;
@@ -82,4 +81,64 @@ h1 {
 .btn-ghost:active {
     background-color: #cf6d17;
     color: #fff;
+}
+
+
+/*--------------------------------------*/
+/* HEADER */
+/*--------------------------------------*/
+
+header {
+    /* 漸層色: linear-gradient(開始色, 結束色) */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.hero-text-box {
+    position: absolute;
+    width: 1140px;
+    /*  離開top多遠, 離開left多遠  */
+    top: 50%;
+    left: 50%;
+    /*  translate(向X軸靠近, 向Y軸靠近)  */
+    transform: translate(-50%, -50%);
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px
+}
+
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 55px
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 8px 0;
+    color: #fff;
+    /*  取消 a 預設的底線  */
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    /*  使a的border bottom 2px 粗且透明化  */
+    border-bottom: 2px solid transparent;
+    /*  轉場延遲時間  */
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #e67e22;
 }
