--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,21 +30,53 @@ html {
     margin: 0 auto;
 }
 
+section {
+    padding: 80px 0;
+}
 
 /* ----- HEADING ----- */
+h1,
+h2 {
+
+
+    font-weight: 300;
+    text-transform: uppercase;
+    /*  字母之間的間距  */
+    letter-spacing: 1px;
+}
+
 h1 {
     margin-top: 0px;
     margin-bottom: 20px;
     color: #fff;
     font-size: 240%;
-    font-weight: 300;
-    text-transform: uppercase;
-    /*  字母之間的間距  */
-    letter-spacing: 1px;
     /*  單字之間的間距  */
     word-spacing: 4px;
 }
 
+h2 {
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+h2:after {
+    display: block;
+    background-color: #e67e22;
+    content: " ";
+    width: 100px;
+    height: 2px; 
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+/* ----- PARAGRAPHS ----- */
+.long-copy {
+    line-height: 145%;
+    width: 70%;
+    margin-left: 15%;
+}
 
 
 /* ----- BUTTONS ----- */
