--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,15 +34,16 @@ section {
     padding: 80px 0;
 }
 
+.box {
+    padding: 1%
+}
+
 /* ----- HEADING ----- */
 h1,
-h2 {
-
-
+h2,
+h3 {
     font-weight: 300;
     text-transform: uppercase;
-    /*  字母之間的間距  */
-    letter-spacing: 1px;
 }
 
 h1 {
@@ -52,6 +53,8 @@ h1 {
     font-size: 240%;
     /*  單字之間的間距  */
     word-spacing: 4px;
+    /*  字母之間的間距  */
+    letter-spacing: 1px;
 }
 
 h2 {
@@ -59,6 +62,14 @@ h2 {
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 30px;
+    /*  字母之間的間距  */
+    letter-spacing: 1px;
+}
+
+h3 {
+    font-size: 110%;
+    word-spacing: 1px;
+    margin-bottom: 20px;
 }
 
 h2:after {
@@ -76,6 +87,20 @@ h2:after {
     line-height: 145%;
     width: 70%;
     margin-left: 15%;
+}
+
+.box p {
+   font-size: 90%;
+    line-height: 145%;
+}
+
+
+/* ----- ICONS ----- */
+.icon-big {
+    font-size: 350%;
+    color: #e67e22;
+    display: block;
+    margin-bottom: 10px;
 }
 
 
