--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -112,7 +112,7 @@ h2:after {
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
-    transition: :background-color 0.2s, border 0.2s, color 0.2s;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
 .btn-full:link,
@@ -201,8 +201,20 @@ header {
 }
 
 /*--------------------------------------*/
+/* FEATURES */
+/*--------------------------------------*/
+
+.section-features .long-copy {
+    margin-bottom: 40px;
+}
+
+/*--------------------------------------*/
 /* MEALS */
 /*--------------------------------------*/
+
+.section-meals {
+    padding: 0;
+}
 
 .meals-showcase {
     list-style: none;
@@ -218,8 +230,19 @@ header {
 .meal-photo {
     width: 100%;
     margin: 0;
+    overflow: hidden;
+    background-color: #000;
 }
+
 .meal-photo img {
+    opacity: 0.7;
     width: 100%;
     height: auto;
+    transform: scale(1.15);
+    transition: transform 0.2s, opacity 0.5s;
+}
+
+.meal-photo img:hover {
+    transform: scale(1.1);
+    opacity: 0.8;
 }
