--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -190,6 +190,7 @@ header {
     background-size: cover;
     background-position: center;
     height: 100vh;
+    background-attachment: fixed;
 }
 
 .hero-text-box {
@@ -354,4 +355,33 @@ header {
 
 .city-feature {
     margin-bottom: 5px;
+}
+
+/*--------------------------------------*/
+/* TESTIMONIALS */
+/*--------------------------------------*/
+
+.section-testimonials {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    border-radius: 50%;
+    height: 50px;
+    margin-right: 10px;
 }
