--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -372,6 +372,17 @@ blockquote {
     padding: 2%;
     font-style: italic;
     line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    
+    position: absolute;
+    top: -5px;
+    left: -5px;
 }
 
 cite {
@@ -382,6 +393,7 @@ cite {
 
 cite img {
     border-radius: 50%;
-    height: 50px;
+    height: 45px;
     margin-right: 10px;
+    vertical-align: middle;
 }
