--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,7 @@ Orange color: #e67e22
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -135,6 +136,7 @@ a:visited {
     text-decoration: none;
     padding-bottom: 1px;
     border-bottom: 1px solid #e67e22;
+    -webkit-transition: border-bottom 0.2s, colos 0.2s;
     transition: border-bottom 0.2s, colos 0.2s;
 }
 
@@ -153,6 +155,7 @@ input[type=submit] {
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -191,6 +194,7 @@ input[type=submit]:active {
 
 header {
     /* 漸層色: linear-gradient(開始色, 結束色) */
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
     background-size: cover;
     background-position: center;
@@ -205,6 +209,7 @@ header {
     top: 50%;
     left: 50%;
     /*  translate(向X軸靠近, 向Y軸靠近)  */
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 
@@ -237,6 +242,7 @@ header {
     /*  使a的border bottom 2px 粗且透明化  */
     border-bottom: 2px solid transparent;
     /*  轉場延遲時間  */
+    -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
 }
 
@@ -283,11 +289,16 @@ header {
     opacity: 0.7;
     width: 100%;
     height: auto;
+    -webkit-transform: scale(1.15);
     transform: scale(1.15);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.2s;
+    transition: opacity 0.5s, -webkit-transform 0.2s;
     transition: transform 0.2s, opacity 0.5s;
+    transition: transform 0.2s, opacity 0.5s, -webkit-transform 0.2s;
 }
 
 .meal-photo img:hover {
+    -webkit-transform: scale(1.1);
     transform: scale(1.1);
     opacity: 0.8;
 }
@@ -367,6 +378,7 @@ header {
 /*--------------------------------------*/
 
 .section-testimonials {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url(img/back-customers.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
     background-size: cover;
     color: #fff;
@@ -416,6 +428,7 @@ cite img {
     border-radius: 5px;
     width: 90%;
     margin-left: 5%;
+    -webkit-box-shadow: 0 2px 2px #efefef;
     box-shadow: 0 2px 2px #efefef;
 }
 
@@ -539,6 +552,7 @@ footer {
 .social-links li a:hover,
 .social-links li a:active {
     color: #fff;
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
@@ -551,6 +565,7 @@ footer {
 .ion-social-twitter,
 .ion-social-googleplus,
 .ion-social-instagram {
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
